# manufacturing-knowledge-graph-semantic-search

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  docker.yml  pages.yml
backend/: Dockerfile  cleanup_qdrant.py  requirements.txt
backend/app/: main.py
backend/app/database/: session.py
backend/app/extraction/: nlp_pipeline.py
backend/app/graph/: fuseki.py
backend/app/ingestion/: processor.py
backend/app/models/: domain.py
backend/app/ontology/: shacl_validator.py
backend/app/schemas/: domain.py
backend/app/search/: qdrant.py
backend/app/security/: auth.py
backend/tests/unit/: test_extraction.py  test_validation.py
data/sample_documents/: cnc_maintenance_report_0.txt  cnc_maintenance_report_1.txt  cnc_maintenance_report_2.txt  cnc_maintenance_report_3.txt  cnc_maintenance_report_4.txt  cnc_maintenance_report_5.txt  cnc_maintenance_report_6.txt  quality_inspection_01_14.txt  quality_inspection_01_15.txt  quality_inspection_01_16.txt  quality_inspection_01_17.txt  quality_inspection_01_18.txt  quality_inspection_01_19.txt  welding_specs_10.txt  welding_specs_11.txt  welding_specs_12.txt  welding_specs_13.txt  welding_specs_7.txt  welding_specs_8.txt  welding_specs_9.txt
docs/: architecture.md
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/pages/: Dashboard.tsx  Documents.tsx  Entities.tsx  GraphExplorer.tsx  SemanticSearch.tsx
ontology/: manufacturing.ttl  manufacturing_shapes.ttl
scripts/: generate_sample_documents.py
(+10 files in other folders)
